# noid

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
docs/: architecture.md  component-authoring-guide.md  component-model.md  namespaces.md  player.md  scene-package.md  sibling-CLAUDE-template.md  transport-adapters.md  workflow-integration.md
noid/: __init__.py  __main__.py
noid/core/: __init__.py  base.py  bus.py  component.py  meta.py  namespace.py  player.py
noid/management/: __init__.py  bus_monitor.py
playground/learning/01-bus/01-publish-subscribe/: publish_subscribe.py
playground/learning/01-bus/02-wildcard/: wildcard.py
playground/learning/02-component/01-basic/: basic.py
playground/learning/02-component/02-publish-subscribe/: pub_sub.py
playground/learning/02-component/03-threaded/: threaded.py
playground/learning/03-player/: components.py
playground/learning/03-player/01-basic/: run.py  scene.json
playground/learning/03-player/02-publish-subscribe/: run.py  scene.json
playground/learning/03-player/03-wildcards/: run.py  scene.json
playground/learning/03-player/04-connect/: run.py  scene.json
tests/core/: test_base.py  test_bus.py  test_meta.py  test_namespace.py  test_player.py
