[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "noid"
version = "0.1.0"
description = "Python node-OID component framework"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
noid-play = "noid.core.player:_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["noid*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
