[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mundorum-noid"
version = "0.1.1"
description = "Python n-o-id component framework"
readme = "README.md"
requires-python = ">=3.10"
license = "LGPL-2.1"
authors = [
    {name = "André Santanchè"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/mundorum/noid"
Repository = "https://github.com/mundorum/noid"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
noid-play = "noid.core.player:_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["noid*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
